# simon-speck-c

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Speck.c  Speck.cpp  Speck.h  appveyor.yml  circle.yml  main.cpp  speck.c  speck.h  speck_test.cpp
.github/workflows/: macos.yml
cmake/: ios.toolchain.cmake
cmake/checks/: cpu_avx2.c  cpu_neon.c
include/speck/: speck.h
sample/: speck_test.cpp
scripts/speck/: build_android.sh  build_emscripten.sh  build_ios.sh  build_linux.sh  build_linux_aarch64.sh  build_linux_arm.sh  build_linux_mips.sh  build_linux_powerpc.sh  build_mac.sh  build_tizen.sh  build_win.bat
scripts/tools/: code_format.sh
scripts/tools/ubuntu/: run_qemu_aarch64.sh  run_qemu_arm.sh  run_qemu_mips.sh  run_qemu_powerpc.sh
src/speck/: dllmain.c  speck.c  speck.h  speck_avx2.c  speck_avx2_private.h  speck_common.c  speck_ctr.c  speck_ctr_avx2.c  speck_ctr_neon.c  speck_ctr_private.h  speck_neon.c  speck_neon_private.h  speck_private.h  speck_test.cpp
src/utils/: dllmain.c
test/: CMakeLists.txt
test/speck/: CMakeLists.txt
test/speck/check_algorithm_128128/: CMakeLists.txt  check_algorithm_128128.c
test/speck/speck128128/: CMakeLists.txt  speck128128ctr.c  speck128128ctr.cpp  speck128128ecb.c  speck128128ecb.cpp
test/speck/speck128128ecb/: CMakeLists.txt  speck128128ecb.c
test/speck/speck128192/: CMakeLists.txt  speck128192ctr.cpp  speck128192ecb.cpp
test/speck/speck128256/: CMakeLists.txt  speck128256ctr.cpp  speck128256ecb.cpp
test/utils/: rdtsc.h
